apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: qbittorrent

  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-lan-only@kubernetescrd,kube-system-secure-headers@kubernetescrd"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - qbittorrent.greiner.home
      secretName: qbittorrent-tls

  rules:
    - host: qbittorrent.greiner.home

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: qbittorrent

                port:
                  number: 8080
